# fabriCatraca_backEnd

./: .gitignore  API_GET_CONFIGURATION_FORMATO.md  CONTEXTO_EASY_SETUP.md  CORRECAO_COMPLETA_IDBLOCK.md  EXEMPLO_USO_LOGS.md  IMPLEMENTACAO_CATRA_PUSH_SERVER.md  MAPEAMENTO_API_IDBLOCK.md  MONITOR_404_EXPLICACAO.md  Procfile  README.md  README_ACCESS_LOGS.md  README_MONITOR_PUSH.md  REFACTORING_SESSION_MANAGEMENT.md  RELATORIO_INTEGRACAO_CATRACA.md  __init__.py  catraca.py  conftest.py  objetos.txt  pyproject.toml  pytest.ini  requirements.txt  test_api_complete_mapping.py  test_boolean_conversion.py  test_celery_real_simulation.py  test_celery_task.py  test_idblock_complete.py  test_individual_fields.py  test_new_models.py  test_sync_manual.py  test_to_bool_simple.py  verificação catraca.py
.github/workflows/: deploy.yml  tests.yml
docs/architecture/: user_sync_refactor.md
docs/architecture/adr/: 0001-database-as-source-of-truth.md  0002-viewsets-as-http-adapters.md  0003-controlid-gateway-boundary.md  0004-explicit-device-targeting.md  0005-incremental-legacy-mixin-migration.md
src/: __init__.py
src/core/__seedwork__/: __init__.py
src/core/__seedwork__/domain/: models.py
src/core/__seedwork__/infra/: __init__.py  api_errors.py  catraca_sync.py  pagination.py
src/core/__seedwork__/infra/mixins/: __init__.py  _typing.py  access_logs.py  access_rule.py  access_rule_timezone.py  area.py  card.py  general.py  group.py  group_access_rules.py  portal.py  portal_access_rule.py  template.py  time_span.py  time_zone.py  user_access_rule.py  user_groups.py
src/core/__seedwork__/infra/tests/: test_catraca_sync_configuration.py  test_catraca_sync_http.py  test_catraca_sync_objects.py  test_catraca_sync_remote_enroll.py  test_user_groups_sync_mixin.py
src/core/__seedwork__/infra/types/: __init__.py  access_log_access_rules.py  access_logs.py  access_logs.py_rever  access_rule_time_zones.py  access_rules.py  actions.py  area_access_rules.py  areas.py  cards.py  catra_infos.py  catraca_sync.py  contigency_cards.py  devices.py  group_access_rules.py  groups.py  holidays.py  pins.py  portal_access_rules.py  portal_actions.py  portals.py  qrcodes.py  scheduled_unlock_access_rules.py  time_spans.py  time_zone.py  uhf_tags.py  user_access_rules.py  user_groups.py  user_roles.py
src/core/control_Id/: __init__.py
src/core/control_Id/infra/control_id_django_app/: admin.py  apps.py  device_registry_sync.py  models.py  release_audit_service.py  serializers.py  sync_collect.py  sync_persist.py  tasks.py  temporary_release_notification_service.py  temporary_release_service.py  tests.py  urls.py  views.py
src/core/control_Id/infra/control_id_django_app/management/: __init__.py
src/core/control_Id/infra/control_id_django_app/migrations/: 0006_card.py  0007_device.py  0008_device_users.py  0011_alter_device_users.py  0013_area_alter_accessrule_id_alter_portal_id_and_more.py  0015_customgroup_alter_timespan_end_alter_timespan_start_and_more.py  0016_groupaccessrule.py  0019_rename_access_rule_id_accessruletimezone_access_rule_and_more.py  0023_alter_accesslogs_access_rule_alter_accesslogs_portal.py  0024_accesslogs_access_logs_time_252b52_idx_and_more.py  0025_alter_usergroup_group.py  0026_accesslogs_access_logs_device__cbcf0b_idx.py  0029_releaseaudit.py  0031_accesslogs_sentido.py  0032_temporarygrouprelease.py  0035_biometriccapturesession.py  0037_portalgroup_temporarygrouprelease_portal_group_and_more.py  0038_alter_groupaccessrule_unique_together_and_more.py  0039_data_migration.py  0041_temporaryuserrelease_notified_server.py  0042_temporaryuserrelease_notification_message.py  0043_temporaryuserrelease_notification_email.py
src/core/control_Id/infra/control_id_django_app/models/: __init__.py  access_logs.py  access_rule.py  access_rule_timezone.py  areas.py  biometric_capture_session.py  cards.py  device.py  group.py  group_access_rules.py  portal.py  portal_access_rule.py  portal_device.py  release_audit.py  template.py  temporary_group_release.py  temporary_user_release.py  timespan.py  timezone.py  user_access_rule.py  user_groups.py
src/core/control_Id/infra/control_id_django_app/serializers/: __init__.py  access_logs.py  access_rule.py  access_rule_timezone.py  areas.py  cards.py  device.py  device_actions.py  group.py  group_access_rules.py  portal.py  portal_access_rule.py  portal_device.py  portal_group.py  release_audit.py  template.py  (+6 more)
src/core/control_id/infra/control_id_django_app/: device_registry_sync.py  release_audit_service.py  tasks.py  temporary_release_notification_service.py  temporary_release_service.py  tests.py
src/core/control_id_config/infra/control_id_config_django_app/: __init__.py  admin.py  apps.py  sync_config.py  tasks.py  urls.py
src/core/control_id_monitor/infra/control_id_monitor_django_app/: access_verification.py  admin.py  apps.py  models.py  monitoring.py  notification_handlers.py  serializers.py  tasks.py  tests.py  urls.py  views.py
src/core/seedwork/infra/: catraca_sync.py  sync_mixins.py
src/core/uploader/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/core/uploader/migrations/: 0001_initial.py  0002_alter_archive_options_remove_archive_criado_em_and_more.py
src/core/user/infra/user_django_app/: admin.py  apps.py  managers.py  models.py  permissions.py  role_labels.py  serializers.py  tasks.py  urls.py  validate.py  views.py  visit_service.py
src/django_project/: celery.py  context_processors.py  settings.py  urls.py
src/django_project/settings/: __init__.py  base.py  test.py
src/static/admin/: custom.css
src/templates/admin/: base_site.html  index.html
src/templates/rest_framework/horizontal/: checkbox.html
src/templates/rest_framework/vertical/: checkbox.html
tests/: IMPLEMENTACAO_TESTES.md  README_TESTES.md  RESUMO_TESTES.md  conftest.py  test_basic.py
tests/integration/: test_catraca_sync_core.py  test_core_mixins.py  test_sync_mocked.py  test_users_me.py  test_viewsets.py
tests/unit/: test_models.py  test_monitor_config.py  test_user_admin_form.py  test_user_me_serializer.py
(+254 files in other folders)
