[project]
name = "fabriCatraca"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jonatasperaza", email = "jonatassilvaperaza@gmail.com"},
]
dependencies = ["django>=5.2.4", "djangorestframework>=3.16.0", "django-simple-history>=3.10.1", "django-safedelete>=1.4.1", "django-debug-toolbar>=5.2.0", "dj-database-url>=3.0.1", "python-dotenv>=1.1.1", "django-cors-headers>=4.7.0", "rest-framework-simplejwt>=0.0.2", "drf-spectacular>=0.28.0", "django-filter>=25.1", "requests>=2.32.4"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "python src/manage.py runserver"
runserver = "python src/manage.py runserver"
createsuperuser = "python src/manage.py createsuperuser"
migrate = "python src/manage.py migrate"
makemigrations = "python src/manage.py makemigrations"
shell = "python src/manage.py shell"
test = "python src/manage.py test"
startapp = "python src/manage.py startapp {args}"
loaddata = "python src/manage.py loaddata {args}"
dumpdata = "python src/manage.py dumpdata {args}"